--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react-dom.min.js"></script>
     
     <script defer src="GithubOrgActivity.js"></script>
+    <script defer src="remember.js"></script>
     <script defer src="main.js"></script>
 
 </head>
