Display repo events with most active users in the center

--- a/index.html
+++ b/index.html
@@ -86,12 +86,14 @@
     <link href="main.css" rel="stylesheet">
 
     <script defer src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/immutable/3.7.6/immutable.min.js"></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.11.2/moment.min.js"></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react.min.js"></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react-dom.min.js"></script>
     
-    <script defer src="GithubOrgActivity.js"></script>
     <script defer src="remember.js"></script>
+    <script defer src="GithubOrgActivity.js"></script>
+    <script defer src="RepositoryEvents.js"></script>
     <script defer src="main.js"></script>
 
 </head>
