--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <script defer src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/immutable/3.7.6/immutable.min.js"></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.11.2/moment.min.js"></script>
-    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react.min.js"></script>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react.js"></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react-dom.min.js"></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/redux/3.3.1/redux.min.js"></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/react-redux/4.4.0/react-redux.min.js"></script>
@@ -104,7 +104,9 @@
     <script defer src="js/Components/RepositoryEvents.js"></script>
     <script defer src="js/Components/GithubAPIIndicator.js"></script>
     <script defer src="js/Components/Top.js"></script>
+    <script defer src="js/Components/containers/Top.js"></script>
     
+    <script defer src="js/reducer.js"></script>
     <script defer src="js/main.js"></script>
 
 </head>
