sync UI + promise action pattern

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
     <script defer src="js/remember.js"></script>
     <script defer src="js/fetches.js"></script>
     <script defer src="js/githubAPI.js"></script>
+    <script defer src="js/promiseLifecycleActions.js"></script>
     
     <script defer src="js/Components/GithubOrgActivity.js"></script>
     <script defer src="js/Components/RepositoryEvents.js"></script>
